<?xml version="1.0"?>
<package format="2">
  <name>consensus_bphto</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zack44170625@gmail.com">vivek</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
 
  <!-- Uncomment if you want to include testing dependencies -->
  <!--
  <test_depend>catkin_lint</test_depend>
  <test_depend>roslint</test_depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
